# obs-studio

UI/: CMakeLists.txt  api-interface.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
UI/data/locale/: de-DE.ini  en-US.ini
UI/forms/: OBSBasicSettings.ui
UI/obs-studio-frontend-api/: CMakeLists.txt  obs-studio-frontend-api.cpp  obs-studio-frontend-api.h  obs-studio-frontend-internal.hpp
